examples/bad/ERROR_AMBIGUOUS_LIST_TYPE/head.st
language core;

extend with #lists ;

fn main(n : Nat) -> Nat {
  return List::head([])(n)
}

//ERROR_AMBIGUOUS_LIST_TYPE
